fix: adjust z-index for sticky elements and update colspan for group header in predictions table

--- a/src/app/all-predictions/all-predictions.component.css
+++ b/src/app/all-predictions/all-predictions.component.css
@@ -50,7 +50,7 @@
 
 .sticky {
     position: sticky;
-    z-index: 2;
+    z-index: 0;
     background-color: var(--p-datatable-header-background) !important;
 }
 
